--- a/views/index.html
+++ b/views/index.html
@@ -1,31 +1,15 @@
-<import: src="./home">
-<import: src="./edit">
-<import: src="./people">
+<import: src="./login">
 
 <Title:>
-  Company directory
+  Instaclone
 
 <Body:>
   <view is="d-before-unload"></view>
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">Directory</a>
-      </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <view is="nav-link" href="/">Home</view>
-          <view is="nav-link" href="/people">People</view>
-          <view is="nav-link" href="/people/new">Add somebody</view>
-        </ul>
-      </div>
-    </div>
-  </div>
   <view is="{{$render.ns}}"></view>
   <div class="container">
     <hr>
     <footer>
-      <p>&copy; Company 2013</p>
+      <p>&copy; Company 2019</p>
     </footer>
   </div>
 
