--- a/views/login.html
+++ b/views/login.html
@@ -3,13 +3,17 @@
     <div class="container">
       <h1>Intaclone</h1>
       <form>
-        <input type="text" name="email">
-        <input type="password" name="password">
-        <button class="btn btn-lg btn-primary">Log in</button>
+        <div class="form-group">
+          <input type="email" class="form-control" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <div>
-        Don't have an account? 
-        <a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up</a>
-      </div>
+    </div>
+    <div class="container">
+      <p>Don't have an account?</p>
+      <a class="btn btn-primary" href="/signup" role="button">Sign up</a>
     </div>
   </div>
