added login page

--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>Intaclone</h1>
-      <form>
+      <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
         <div class="form-group">
           <input type="email" class="form-control" placeholder="Email">
         </div>
