--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,7 @@
+<import: src="./home">
 <import: src="./login">
+<import: src="./register">
+<import: src="./confirmregistration">
 
 <Title:>
   Instaclone
