--- a/views/login.html
+++ b/views/login.html
@@ -2,18 +2,10 @@
   <div class="jumbotron">
     <div class="container">
       <h1>Intaclone</h1>
-      <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
-        <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email">
-        </div>
-        <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      <view is="auth:login"></view>
     </div>
     <div class="container">
-      <p>Don't have an account?</p>
-      <a class="btn btn-primary" href="/signup" role="button">Sign up</a>
+      <hr>
+      <p>Don't have an account? <a href="/register" role="button">Sign up</a></p>
     </div>
   </div>
