--- a/styles/index.styl
+++ b/styles/index.styl
@@ -3,19 +3,8 @@ body
   padding-top: 50px
   padding-bottom: 20px
 
-.connection
-  position: absolute
-  text-align: center
-  top: 0
-  left: 0
-  width: 100%
-  height: 0
-  z-index: 2000
-.connection > .alert
-  border-top: 0
-  border-top-left-radius: 0
-  border-top-right-radius: 0
-  display: inline-block
+input::placeholder
+  text-align: center;
 
-.people table
-  margin-top: 20px
+.align-center
+  text-align: center
