create a reusable post component

--- a/views/home.html
+++ b/views/home.html
@@ -2,17 +2,8 @@
   {{if _session.loggedIn}}
     {{if _page.posts}}
       <div class="container">
-        {{each _page.posts}}
-          <div class="row">
-            <div class="col">
-              <div class="card">
-                <img src="{{this.source_url}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+        {{each _page.posts as #post}}
+          <view is="post" post="{{#post}}"></view>
         {{/}}
       </div>
     {{else}}
