--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,7 +1,7 @@
 // Move down content because we have a fixed navbar that is 50px tall
 body
-  padding-top: 50px
-  padding-bottom: 20px
+  padding-top: 2rem
+  padding-bottom: 1rem
 
 input::placeholder
   text-align: center;
@@ -12,3 +12,21 @@ input::placeholder
 div.card
   width: 18rem;
   margin: auto;
+
+.avatar-sm
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+
+.avatar-md
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+
+.post
+  padding-bottom: 1rem;
+
+.post .card-body
+  padding: 0.5rem
