implement user profile page

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -25,8 +25,18 @@ div.card
   height: 50px;
   border-radius: 50%;
 
+.avatar-lg
+  vertical-align: middle;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+
 .post
   padding-bottom: 1rem;
 
 .post .card-body
   padding: 0.5rem
+
+.profile-tab
+    margin: auto;
+    width: 50%;
