--- a/views/header.html
+++ b/views/header.html
@@ -24,7 +24,9 @@
               <i class="far fa-heart fa-2x"></i>
             </div>
             <div class="col-3">
-              <i class="far fa-user fa-2x"></i>
+              <a href="/{{_session.user.username}}">
+                <i class="far fa-user fa-2x"></i>
+              </a>
             </div>
           </div>
         </div>
