--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <Title:>
-  Instaclone
+  {{if _session.loggedIn}}
+    {{_session.user.name}} (@{{_session.user.username}}) - Instaclone
+  {{else}}
+    Instaclone
+  {{/}}
 
 <Body:>
   <view is="d-before-unload"></view>
