minor style changes to profile icon

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -38,5 +38,8 @@ div.card
   padding: 0.5rem
 
 .profile-tab
-    margin: auto;
-    width: 50%;
+  margin: auto;
+  width: 50%;
+
+.black
+  color:black;
