--- a/views/header.html
+++ b/views/header.html
@@ -24,7 +24,7 @@
               <i class="far fa-heart fa-2x"></i>
             </div>
             <div class="col-3">
-              <a href="/{{_session.user.username}}">
+              <a href="/{{_session.user.username}}" class="black">
                 <i class="far fa-user fa-2x"></i>
               </a>
             </div>
