--- a/views/header.html
+++ b/views/header.html
@@ -5,10 +5,14 @@
         <div class="col">
           <div class="row justify-content-start">
             <div class="col-2">
-              <i class="fab fa-instagram fa-2x"></i>
+              <a href="/" class="black">
+                <i class="fab fa-instagram fa-2x"></i>
+              </a>
             </div>
             <div class="col-10">
-              <h3>Instaclone</h3>
+              <a href="/" class="black">
+                <h3>Instaclone</h3>
+              </a>
             </div>
           </div>
         </div>
