--- a/components/header/index.html
+++ b/components/header/index.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="col align-center">
-            <input type="text" placeholder="Search">
+            <input type="text" placeholder="Search" on-input="search($event)">
         </div>
         <div class="col">
           <div class="row justify-content-end">
