refactoring of the profile page

--- a/components/header/index.html
+++ b/components/header/index.html
@@ -28,7 +28,7 @@
               <i class="far fa-heart fa-2x"></i>
             </div>
             <div class="col-3">
-              <a href="/{{#root._session.user.username}}" class="black">
+              <a href="/user/{{#root._session.user.username}}" class="black">
                 <i class="far fa-user fa-2x"></i>
               </a>
             </div>
